# docker-workshop

./: Dockerfile  Makefile  README.md  add-security.sh  compose.yaml  docker-compose.yaml  fixcss.sh  metadata.json  mkdocs.yml  mkdocs.yml.bak  netlify.toml  pyproject.toml  sbxscript.sh  setup.sh  update-frontpage.sh
backend/: go.mod
docs/: index.md
docs/ai-governance/: filesystem-demo.md  introduction.md  mcp-hands-on.md  network-demo.md  observability.md  policy-model.md  setup.md  whats-next.md
docs/dhictl/: browsing-catalog.md  introducing-vulnerabilities.md  introduction.md  migrating.md  product-catalog.md  supply-chain.md
docs/kubernetes-101/: compose-bridge.md  deployments.md  genai-on-kubernetes.md  ingress.md  overview.md  pods.md  scaling-and-updates.md  services.md
docs/lab1/: compose-watch.md  docker-init.md  overview.md  postgres.md  what-is-a-container.md
docs/lab10/: getting-started.md  overview.md  sharing.md
docs/lab2/: aws-s3-setup.md  getting-started.md  overview.md  services.md  tech-stack.md
docs/lab3/: services.md  tech-stack.md
docs/lab4/: .overview.md.swp  getting-started.md  overview.md
docs/lab5/: getting-started.md  getting-started.md.orig  overview.md
docs/lab6/: .overview.md.swp  getting-started.md  overview.md
docs/lab7/: getting-started.md  overview.md
docs/lab8/: getting-started.md  overview.md
docs/prereq/: prereq.md
docs/product-catalog/: build.md  develop.md  overview.md  prereq.md  test.md  (+2 more)
site/: 404.html  index.html  sitemap.xml
ui/: index.html  package-lock.json
workshop/: mkdocs.yml  netlify.toml
(+322 files in other folders)
