[tool.poetry]
name = "wad2024-workshop"
version = "0.1.0"
description = "Workshop for WeAreDeveloper Conference"
authors = ["Ajeet Singh Raina <ajeetraina@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
